Add setup script; Add more documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-sources/Software/Microsoft_VS_2019_Professional/vs_Professional.exe
-sources/VM/DotNetFramework/microsoft-windows-netfx3-ondemand-package.cab
-sources/VM/DotNetFramework/NDP472-KB4054530-x86-x64-AllOS-ENU.exe
-sources/VM/DotNetFramework/2019/microsoft-windows-netfx3-ondemand-package~31bf3856ad364e35~amd64~~.cab
-sources/VM/DotNetFramework/2019/Microsoft-Windows-NetFx3-OnDemand-Package~31bf3856ad364e35~amd64~en-US~.cab
+sources/*
+!sources/*.ps1
+
+modules/ComputerManagementDsc
+modules/SqlServer
+modules/SqlServerDsc
+modules/xActiveDirectory
+modules/xDhcpServer
+modules/xDnsServer
+modules/xNetworking
+modules/xRemoteDesktopAdmin
+modules/xWebAdministration
+modules/xWinEventLog
+
+configuration/*.mof
